--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,8 +3,11 @@
   "tasks": [
     {
       "type": "npm",
-      "script": "build:node",
-      "problemMatcher": ["$gulp-tsc"],
+      "script": "compile",
+      "problemMatcher": [
+        "$ts-webpack-watch",
+        "$tslint-webpack-watch"
+      ],
       "group": "build"
     },
     {
@@ -20,6 +23,25 @@
       },
       "isBackground": true,
       "group": "build"
+    },
+    {
+      "type": "npm",
+      "script": "build",
+      "group": "build",
+      "problemMatcher": [
+        "$ts-webpack",
+        "$tslint-webpack"
+      ]
+    },
+    {
+      "type": "npm",
+      "script": "watch",
+      "group": "build",
+      "isBackground": true,
+      "problemMatcher": [
+        "$ts-webpack-watch",
+        "$tslint-webpack-watch"
+      ]
     }
   ]
 }
