--- a/package.json
+++ b/package.json
@@ -1499,11 +1499,20 @@
     "vscode:prepublish": "webpack",
     "watch": "webpack --mode development --watch --progress"
   },
+  "workspaces": [
+    "workspaces/*"
+  ],
   "dependencies": {
+    "@types/moment": "^2.13.0",
+    "@types/node": "^20.12.12",
+    "@types/vscode": "^1.89.0",
+    "@vscode/vsce": "^2.26.1",
     "axios": "^1.7.2",
     "base64-to-uint8array": "^1.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "corepack": "^0.28.1",
     "diff-match-patch": "^1.0.5",
-    "gists": "github:lostintangent/gists",
+    "gists": "workspace:*",
     "github-base": "^1.0.0",
     "https-browserify": "^1.0.0",
     "is-binary-path": "^3.0.0",
@@ -1518,16 +1527,11 @@
     "simple-git": "^3.24.0",
     "stream-http": "^3.2.0",
     "title-case": "^4.3.1",
-    "url": "^0.11.3",
-    "util": "^0.12.5",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^20.12.12",
-    "@types/vscode": "^1.89.0",
-    "copy-webpack-plugin": "^12.0.2",
     "ts-loader": "^9.5.1",
     "tslint": "^5.20.1",
     "typescript": "^5.4.5",
-    "@vscode/vsce": "^2.26.1",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "vscode-nls-dev": "^4.0.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
@@ -1535,5 +1539,11 @@
   "overrides": {
     "parse-link-header": "^2.0.0"
   },
-  "packageManager": "npm@10.8.0+sha512.c21f77b91733829ec70e73cc88b5dc0a4bf685a81d252d3327d293ff7d5dd05a173f4dbeaa037600ec29696f397f14569229e5dab10b7cfc3e0a30575b8f3f8d"
+  "packageManager": "yarn@4.2.2+sha256.1aa43a5304405be7a7cb9cb5de7b97de9c4e8ddd3273e4dad00d6ae3eb39f0ef",
+  "devDependencies": {
+    "@eslint/js": "^9.3.0",
+    "eslint": "9.x",
+    "globals": "^15.3.0",
+    "typescript-eslint": "^7.10.0"
+  }
 }
