--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,11 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/checkout@v4
         with:
-          node-version: 14.x
+          submodules: recursive
+          fetch-depth: 0
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
       - run: npm install
       - name: Publish to VS Marketplace
         run: npx vsce publish
