General cleanup and fixes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES2019",
-    "outDir": "out",
+    "outDir": ".build",
     "lib": [
       "ES2019",
       "DOM"
