--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "browser": "./dist/extension-web.js",
   "scripts": {
     "preinstall": "git submodule update --init --recursive",
-    "postinstall": "yarn sdks",
+    "postinstall": "yarn sdks vscode",
     "compile": "tsc -p ./",
     "build": "webpack --mode development",
     "lint": "eslint \"**/*\"",
@@ -63,7 +63,6 @@
   },
   "dependencies": {
     "@eslint/js": "^9.3.0",
-    "@types/moment": "^2.13.0",
     "@types/node": "^20.12.12",
     "@types/vscode": "^1.89.0",
     "@types/webpack": "^5.28.5",
