--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "simple-git": "^3.24.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
+    "supports-color": "^9.4.0",
     "title-case": "^4.3.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
